<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.Fragment.HomeFragment">

    <TextView
        android:id="@+id/tv_deteksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deteksi_kalori_makanan"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="200dp"
        app:cardCornerRadius="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_deteksi">

        <ImageView
            android:id="@+id/img_story"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_image" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ly_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/card_view">

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_deteksi"
            android:text="@string/gallery"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_deteksi"
            android:text="@string/camera"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_deteksi"
            android:text="@string/berikutnya"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="50dp"/>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>