<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="292dp"
        android:layout_height="314dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_marginTop="10dp"
        android:text="@string/Login"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_marginLeft="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ly_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tv_login">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="380dp"
                android:layout_height="50dp"
                android:hint="Email"
                android:background="@drawable/btn_shape"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:paddingLeft="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="380dp"
                android:layout_height="50dp"
                android:hint="Password"
                android:background="@drawable/btn_shape"
                android:paddingRight="10dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:paddingLeft="20dp"
                android:longClickable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

     </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_below="@+id/ly_1"
        android:background="@drawable/btn_shape"
        android:backgroundTint="@color/orange"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/ly_2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_below="@+id/btn_login"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_dont_have_account"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="40dp" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginEnd="80dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingTop="3dp"
            android:paddingLeft="20dp"
            android:background="@drawable/mini_btn_shape"
            android:backgroundTint="@color/orange"/>
    </LinearLayout>

</RelativeLayout>